# shm

./: .gitignore  CMakeLists.txt  Pipfile  README.md  build_windows.ps1  requirements.txt
.github/workflows/: cmake.yml
include/shm/: add.h  mapped_file.h
include/shm/impl/: mapped_file_posix.h  mapped_file_selector.h  mapped_file_strategy.h  mapped_file_windows.h
src/: CMakeLists.txt  add.cpp  mapped_file.cpp  posix_mapped_file.cpp  python_module.cpp  windows_mapped_file.cpp
tests/: CMakeLists.txt  test_add.cpp  test_auto_move.cpp  test_mapped_file.cpp  test_no_move_small.cpp  test_python_add.py  test_strategy.cpp
